# avatarify-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  avatarify-desktop.pro
avatarify/: README.md  avatarify.pro
avatarify-desktop/: .qmake.stash  Makefile  avatarify-desktop.pro  avatarify-desktop_en_US.ts  content_Config_qml.cpp  main.qml  main_qml.cpp  qml.qrc  qml_qmlcache.qrc  qmlcache_loader.cpp  qrc_qml.cpp  qrc_qml_qmlcache.cpp
avatarify-desktop/content/: Config.qml  Preview.qml
avatarify/cmake/: windeployqt.cmake
avatarify/installer/: package_for_windows.bat
avatarify/resources/: resources.qrc
avatarify/src/: CropImageWindow.qml  InferenceManager.cpp  InferenceManager.h  InferenceWorker.cpp  InferenceWorker.h  main.cpp  main.qml  qml.qrc
avatarify/src/camera/: AsyncCameraCapture.cpp  AsyncCameraCapture.h
avatarify/src/imagecropper/: ImageCropperPrivate.h  ImageCropperWidget.cpp  ImageCropperWidget.h
avatarify/src/predictors/: LibtorchFOMM.cpp  LibtorchFOMM.h  LibtorchIdentityPredictor.cpp  LibtorchPredictor.cpp  LibtorchPredictor.h  Predictor.cpp
avatarify/src/utils/: amplitudelogger.cpp  amplitudelogger.h  cipherbuf.cpp  cipherbuf.h  cipherreader.cpp  cipherreader.h  facefinder.cpp  facefinder.h  utils.cpp  utils.h  versionchecker.cpp  versionchecker.h
avatarify/src/vcam/: AkVCamBridge.cpp  AkVCamBridge.h  StubVCam.h
cmake/: windeployqt.cmake
installer/config/: config.xml
lib/: libyuv.pri
lib/Demo_project/CommTest/: CommTest.clw  CommTest.cpp  CommTest.dsp  CommTest.h  CommTest.plg  CommTestDlg.cpp  CommTestDlg.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h
lib/Demo_project/Driver/: CommDriver.c  CommDriver.dsp  CommDriver.dsw  CommDriver.h  CommDriver.plg  SOURCES
lib/Demo_project/Include/: IoControl.h
lib/baseclasses/: BaseClasses.vcxproj  arithutil.cpp  combase.cpp  cprop.cpp  dllentry.cpp  dllsetup.cpp  refclock.h  renbase.cpp  schedule.cpp  stdafx.h  transfrm.cpp  transip.cpp  videoctl.cpp
lib/ds_vcam/: CMakeLists.txt  CVCamFilter.cpp  CVCamFilter.h  CVCamOutStream.cpp  CVCamOutStream.h  DSVCam.def  Log.h  README.md  dllmain.cpp  stdafx.cpp  stdafx.h
lib/ds_vcam/_vcam_src/: Filters.h
lib/ds_vcam/baseclasses/: UpgradeLog.htm  amfilter.cpp  amfilter.h  combase.h  cprop.h  dllentry.cpp  dllsetup.cpp  dxmperf.h  outputq.h  pstream.cpp  pstream.h  seekpt.cpp  source.h  stdafx.h  streams.h  sysclock.cpp  transfrm.h  videoctl.h  vtrans.cpp  winutil.cpp  winutil.h  wxdebug.cpp  wxdebug.h  wxutil.cpp
lib/ds_vcam/scripts/: open_graphedt.bat  register_filter.bat  unregister_filter.bat
lib/ds_vcam/utils/: base64.cpp  base64.h
lib/dshow_vcam/: CMakeLists.txt  CVCamFilter.cpp  CVCamOutStream.cpp  CVCamOutStream.h  dllmain.cpp
lib/dshow_vcam/_vcam_src/: CMakeLists.txt
lib/dshow_vcam/_vcam_src/baseclasses/: wxutil.h
lib/dshow_vcam/baseclasses/: CMakeLists.txt  refclock.h  sysclock.h  winctrl.h  wxlist.h
lib/dshow_vcam/utils/: Log.h
lib/dshow_vcam_assistant/: CMakeLists.txt  main.cpp  service.cpp  service.h
lib/svcam/: CMakeLists.txt  README.md  SVCam.cpp  SVCam.def  SVCam.h  SVCam.vcxproj  dll.def  dllmain.cpp  libshared_export.h  stdafx.h  targetver.h
lib/svcam/baseclasses/: CMakeLists.txt  amvideo.cpp  ddmm.cpp  dllentry.cpp  dxmperf.h  mtype.cpp  perflog.cpp  pullpin.cpp  streams.h  strmctl.cpp  wxdebug.cpp  wxlist.cpp
lib/svcam/x64/Debug/: SVCam.exp
lib/vcam_src/: Dll.cpp  Filters.cpp  Filters.def  README.md
lib/vcam_src/baseclasses/: CMakeLists.txt  amextra.h  cache.h  ctlutil.h  dllsetup.h  fourcc.h  measure.h  msgthrd.h  mtype.h  reftime.h  renbase.h  strmctl.h  transip.h  vtrans.h
lib/windows-vcam-driver/: CMakeLists.txt  README.md  avshws.h  avshws.inx  avshws.vcxproj  capture.cpp  capture.h  device.cpp  device.h  filter.cpp  filter.h  hwsim.cpp  hwsim.h  image.cpp  image.h  purecall.c
lib/windows-vcam-driver/Debug/: avshws.cer  avshws.inf  avshws.sys
lib/windows-vcam-driver/Debug/avshws/: avshws.cat
lib/windows-vcam-driver/x64/Debug/: avshws.inf  avshws.sys
lib/windows-vcam-driver/x64/Debug/avshws/: avshws.cat
lib/windows-vcam-driver/x64/Release/: CodeAnalysisResultManifest.txt  avshws.cer  avshws.inf  avshws.sys  capture.nativecodeanalysis.sarif  capture.nativecodeanalysis.xml  device.nativecodeanalysis.sarif  filter.nativecodeanalysis.sarif  filter.nativecodeanalysis.xml  hwsim.nativecodeanalysis.sarif  hwsim.nativecodeanalysis.xml  image.nativecodeanalysis.sarif  purecall.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml
lib/windows-vcam-driver/x64/Release/avshws/: avshws.cat  avshws.inf  avshws.sys
resources/: resources.qrc
scripts/: register_filter.bat  register_filter_vcam-src.bat  unregister_filter.bat  unregister_filter_vcam-src.bat
src/: AsyncCameraCapture.cpp  AsyncCameraCapture.h  InferenceManager.cpp  InferenceManager.h  InferenceWorker.cpp  InferenceWorker.h  PoorMansProbe.cpp  PoorMansProbe.h  avatarify-desktop.pro  backend.cpp  backend.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
src/camera/: AsyncCameraCapture.cpp  AsyncCameraCapture.h  PoorMansProbe.cpp  PoorMansProbe.h  vpImageConvert.cpp  vpImageConvert.h  yuv2rgb.cpp  yuv2rgb.h
src/camera/crop/: DlibShapePredictor.cpp  DlibShapePredictor.h  KalmanCrop.cpp  KalmanCrop.h  KalmanFilter.cpp  KalmanFilter.h
src/content/: Config.qml  Preview.qml
src/imagecropper/: CursorPosition.h  ImageCropper.cpp  ImageCropper.h
src/predictors/: IdentityPredictor.cpp  IdentityPredictor.h  LibtorchFOMM.cpp  LibtorchFOMM.h  LibtorchIdentityPredictor.cpp  LibtorchIdentityPredictor.h  LibtorchPredictor.cpp  LibtorchPredictor.h  Predictor.cpp  Predictor.h
src/vcam/: AbstractVCam.cpp  AbstractVCam.h  AbstractVCamInterface.cpp  AbstractVCamInterface.h  AkVCamBridge.cpp  AkVCamBridge.h  CVideoRenderer.cpp  CVideoRenderer.h  DShowPlayer.cpp  DShowPlayer.h  DirectShowVCam.cpp  DirectShowVCam.h  StubVCam.cpp  StubVCam.h
src/vcam/baseclasses/: amextra.cpp  ctlutil.cpp  outputq.cpp  perflog.cpp  refclock.cpp  source.cpp  streams.h  winctrl.cpp  wxdebug.cpp  wxdebug.h  wxutil.cpp
src/vcam/svcam/: SVCam.cpp  SVCam.h  (+3 more)
(+14 files in other folders)
